@@ -7,6 +7,8 @@ version 0.11.0-pre10:
 	* IRC Plugin can do whois (right click and info)
 	* IRC Plugin got away message support
 	* Gaim blist to WinAIM blt perl script (courtesy Andy Harrison)
+	* Can view all group chats in one tabbed window (same keybindings
+	  as for tabbed normal conversations)
 
 version 0.11.0-pre9 (03/26/2001):
 	* Can register Jabber accounts (load the Jabber plugin and click
